--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ before_script:
 Build 5.6:
   stage: build
   script:
-    - docker build -t $IMAGE_TAG:5.6  --build-arg PHP_BASE_IMAGE_VERSION=5.6 .
+    - docker build -t $IMAGE_TAG:5.6  --build-arg PHP_BASE_IMAGE_VERSION=5.6 ./5.6
     - docker push $IMAGE_TAG:5.6
 
 Build 7.1:
